examples/test/path1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: newnginx-path1-svc
  namespace: nginx-ingress 
spec:
  selector: 
    app: nginxlabel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
