examples/test/pathbasedingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: newnginx-ingress-path
  namespace: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: newnginx-path2-svc
    servicePort: 80
  rules:
  - host: mohank.tk      
    http:
      paths:
      - path: /path2
        pathType: Prefix
        backend:
          serviceName: newnginx-path2-svc
          servicePort: 80
      - path: /path1
        pathType: Prefix
        backend:
          serviceName: newnginx-path1-svc
          servicePort: 80
