examples/test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newnginx
  namespace: nginx-ingress
  labels:
    app: nginxlabel
spec:
  containers: 
    - name: nginx
      image: mohankrish3/nginx
      ports:
      - containerPort: 80
  imagePullSecrets:
    - name: dockerconfig
